[gd_scene load_steps=5 format=3 uid="uid://ckooumxkkljsg"]

[ext_resource type="Script" path="res://mainmenu.gd" id="1_rhkky"]
[ext_resource type="Texture2D" uid="uid://di3fr6e65hee0" path="res://assets/Space Background (1).png" id="1_y4p7s"]
[ext_resource type="FontFile" uid="uid://dnpkfghmefjyi" path="res://assets/MinimalPixel v2.ttf" id="2_wkvoj"]
[ext_resource type="Texture2D" uid="uid://b6arsa7eug46e" path="res://assets/LogoFinale!.png" id="3_ymxie"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rhkky")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_y4p7s")

[node name="LogoFinale!" type="Sprite2D" parent="TextureRect"]
position = Vector2(720, 278)
scale = Vector2(0.729121, 0.730456)
texture = ExtResource("3_ymxie")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 384.0
offset_top = 320.0
offset_right = -384.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_wkvoj")
theme_override_font_sizes/font_size = 38
text = "Start"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_wkvoj")
theme_override_font_sizes/font_size = 38
text = "Options"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_wkvoj")
theme_override_font_sizes/font_size = 38
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
